<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_notification"
        android:title="@string/notification_setting_title"
        android:summary="@string/notification_setting_summary"
        android:defaultValue="true" />
    
    <CheckBoxPreference
        android:key="pref_boot_start"
        android:title="@string/run_startup_setting_title"
        android:summary="@string/run_startup_setting_summary"
        android:defaultValue="true" /> 
        
    <ListPreference
            android:key="@string/setting_preference_static_refresh_time_key"
            android:title="@string/setting_preference_refresh_time_title"
            android:summary="@string/setting_preference_refresh_time_summary"
            android:entries="@array/setting_refresh_options"
            android:entryValues="@array/setting_refresh_options_values"
            android:defaultValue="@string/setting_refresh_default_option"/>

</PreferenceScreen>